virt01/automated/tools/poweradmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poweradmin-ingress
  namespace: tools
  annotations:
    ingressClassName: traefik
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: nsadmin.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: poweradmin-svc
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - nsadmin.k3s.nf.lab
    secretName: poweradmin-tls
